--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
-    "eslint": "8.44.0",
-    "eslint-config-next": "13.4.9",
+    "kute.js": "^2.2.4",
     "next": "13.4.9",
     "postcss": "8.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3"
+    "react-icons": "^4.10.1",
+    "react-scroll": "^1.8.9",
+    "tailwindcss": "^3.3.3"
   }
 }
